--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,34 @@
-Django>=4.2,<5
-djangorestframework>=3.15
-djangorestframework-simplejwt>=5.2
-django-cors-headers>=4.0
-django-apscheduler>=0.6
-Pillow>=10.0           # for ImageField (profile pictures)
-django-environ>=0.10   # optional: env config
-requests>=2.28
+APScheduler==3.11.0
+asgiref==3.9.1
+attrs==25.3.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+cryptography==45.0.7
+Django==4.2.24
+django-apscheduler==0.7.0
+django-cors-headers==4.8.0
+django-encrypted-model-fields==0.6.5
+django-environ==0.12.0
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+dotenv==0.9.9
+drf-spectacular==0.28.0
+idna==3.10
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+pillow==11.3.0
+pycparser==2.23
+PyJWT==2.10.1
+python-dotenv==1.1.1
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.5
+rpds-py==0.27.1
+sqlparse==0.5.3
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+uritemplate==4.2.0
+urllib3==2.5.0
